major bug fixed: overflowing to right when swiped on mobile/tablet devices; needed a position:relative

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto:wght@100;300&display=swap");
 
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+#root {
+  position: relative;
+  overflow-x: hidden !important;
+}
+
 body::-webkit-scrollbar {
   display: none; /* for Chrome, Safari, and Opera */
 }
@@ -10,8 +23,8 @@ body::-webkit-scrollbar {
 
 .progress-container {
   position: fixed;
-  right: 0.5%;
-  top: 1%;
+  left: 0%;
+  top: 0%;
   width: 8px;
   height: 100%;
   background: #222;
@@ -22,19 +35,13 @@ body::-webkit-scrollbar {
 
 .progress-bar {
   width: 8px;
-  background: #d4b255;
+  background: #aa8fff;
   border-radius: 2px;
 }
 
 .progress-bar:before {
   height: 1%;
 }
-
-/* .glow {
-  -webkit-box-shadow: 0px 0px 5px 6px rgba(212, 178, 85, 0.48);
-  -moz-box-shadow: 0px 0px 5px 6px rgba(212, 178, 85, 0.48);
-  box-shadow: 0px 0px 5px 6px rgba(212, 178, 85, 0.48);
-} */
 
 #map {
   height: 31.25rem;
@@ -44,13 +51,11 @@ body::-webkit-scrollbar {
 
 .leaflet-container {
   height: 100%;
+  width: 100% !important;
 }
 
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
+.leaflet-container * {
+  max-width: 100%;
   box-sizing: border-box;
 }
 
@@ -89,10 +94,6 @@ canvas {
   z-index: 1;
 }
 
-html {
-  overflow-x: hidden;
-}
-
 .preloader {
   background-color: #000000;
   width: 100%;
@@ -109,10 +110,7 @@ html {
 }
 
 body {
-  z-index: 1;
-
   background: #16222a; /* fallback for old browsers */
-
   background-image: url("data:image/svg+xml,%3Csvg width='120' height='120' viewBox='0 0 120 120' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M9 0h2v20H9V0zm25.134.84l1.732 1-10 17.32-1.732-1 10-17.32zm-20 20l1.732 1-10 17.32-1.732-1 10-17.32zM58.16 4.134l1 1.732-17.32 10-1-1.732 17.32-10zm-40 40l1 1.732-17.32 10-1-1.732 17.32-10zM80 9v2H60V9h20zM20 69v2H0v-2h20zm79.32-55l-1 1.732-17.32-10L82 4l17.32 10zm-80 80l-1 1.732-17.32-10L2 84l17.32 10zm96.546-75.84l-1.732 1-10-17.32 1.732-1 10 17.32zm-100 100l-1.732 1-10-17.32 1.732-1 10 17.32zM38.16 24.134l1 1.732-17.32 10-1-1.732 17.32-10zM60 29v2H40v-2h20zm19.32 5l-1 1.732-17.32-10L62 24l17.32 10zm16.546 4.16l-1.732 1-10-17.32 1.732-1 10 17.32zM111 40h-2V20h2v20zm3.134.84l1.732 1-10 17.32-1.732-1 10-17.32zM40 49v2H20v-2h20zm19.32 5l-1 1.732-17.32-10L42 44l17.32 10zm16.546 4.16l-1.732 1-10-17.32 1.732-1 10 17.32zM91 60h-2V40h2v20zm3.134.84l1.732 1-10 17.32-1.732-1 10-17.32zm24.026 3.294l1 1.732-17.32 10-1-1.732 17.32-10zM39.32 74l-1 1.732-17.32-10L22 64l17.32 10zm16.546 4.16l-1.732 1-10-17.32 1.732-1 10 17.32zM71 80h-2V60h2v20zm3.134.84l1.732 1-10 17.32-1.732-1 10-17.32zm24.026 3.294l1 1.732-17.32 10-1-1.732 17.32-10zM120 89v2h-20v-2h20zm-84.134 9.16l-1.732 1-10-17.32 1.732-1 10 17.32zM51 100h-2V80h2v20zm3.134.84l1.732 1-10 17.32-1.732-1 10-17.32zm24.026 3.294l1 1.732-17.32 10-1-1.732 17.32-10zM100 109v2H80v-2h20zm19.32 5l-1 1.732-17.32-10 1-1.732 17.32 10zM31 120h-2v-20h2v20z' fill='%239C92AC' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E"),
     linear-gradient(to right, #3a6073, #16222a);
 }
@@ -195,13 +193,8 @@ section h1 {
   padding: 1rem;
 }
 
-img {
-  width: 18.75rem;
-  height: 18.75rem;
-}
-
 main {
-  max-width: 100%;
+  max-width: 100vw;
   height: 100vh;
   margin-bottom: 10rem;
   position: relative;
@@ -211,7 +204,6 @@ main {
   height: 95%;
   width: 100%;
   /*background-color: #212529;*/
-
   display: flex;
   margin-bottom: 4rem;
 }
@@ -937,7 +929,7 @@ video {
 .overlay-loading {
   position: fixed;
 
-  width: 100vw;
+  max-width: 100vw;
   height: 100vh;
   z-index: 2;
   display: flex;
